[tool.poetry]
name = "mie1520"
version = "0.1.0"
description = ""
authors = ["Hafiz <hafiz.buetipe@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.2.1"
numpy = "^1.26.4"
matplotlib = "^3.8.3"
sacrebleu = "^2.4.0"
click = "^8.1.7"
entmax = "^1.3"
black = "^24.2.0"
transformers = "^4.38.2"
datasets = "^2.18.0"
evaluate = "^0.4.1"
scikit-learn = "^1.4.1.post1"
accelerate = "^0.27.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
